Fixed andMErged