@@ -5,25 +5,23 @@ import static client.scenes.MainCtrl.scheduler;
 
 import client.MyFXML;
 import client.communication.Utils;
-import client.communication.WaitingRoomCommunication;
 import client.utils.SceneController;
-import client.utils.UserAlert;
 import com.google.inject.Inject;
 import commons.User;
-
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
-import javafx.collections.FXCollections;
 import javafx.fxml.FXML;
 import javafx.scene.chart.BarChart;
 import javafx.scene.chart.CategoryAxis;
 import javafx.scene.chart.NumberAxis;
 import javafx.scene.chart.XYChart;
-import javafx.scene.image.Image;
-import javafx.scene.image.ImageView;
+
 
 /**
- * Displays the final screen at the end of the game
+ * Displays the final screen at the end of the game.
  */
 public class EndLeaderboardCtrl extends SceneController {
 
@@ -51,22 +49,29 @@ public class EndLeaderboardCtrl extends SceneController {
     }
 
     /**
-     * Loads the Screen with the data of the match
+     * Loads the Screen with the data of the match.
      */
     @Override
     public void show() {
         chart.lookup(".chart-plot-background").setStyle("-fx-background-color: transparent;");
-         //get player list from server
+        //get player list from server
         scheduler.execute(() -> {
             Optional<List<User>> l = Utils.getAllUsers(currentGameID);
 
 
 
             if (l.isPresent()) {
-                 //Sorts the list for a proper display
-                var sortedList = l.stream().toList().get(0);
+                //Sorts the list for a proper display
 
-                List<User> newList = sortedList.stream().sorted((x,y)-> x.getScore() - y.getScore()).collect(Collectors.toList());
+                //var sortedList = l.stream().toList().get(0);
+                User[] array = l.get().toArray(new User[l.get().size()]);
+                ArrayList<User> sortedList = new ArrayList<>();
+                for (User a: array
+                     ) {
+                    sortedList.add(a);
+                }
+                List<User> newList = sortedList.stream()
+                        .sorted((x,y) -> x.getScore() - y.getScore()).collect(Collectors.toList());
                 Collections.reverse(newList);
 
                 for (User user:newList
@@ -77,7 +82,7 @@ public class EndLeaderboardCtrl extends SceneController {
                 var series = new XYChart.Series<String, Integer>();
                 series.setName("Points");
                 newList.forEach(user -> {
-                    var data = new XYChart.Data<String,Integer>(user.getUsername(), user.getScore());
+                    var data = new XYChart.Data<String,Integer>(user.getUsername(),user.getScore());
                     series.getData().add(data);
                 });
                 System.out.println(series);
@@ -91,7 +96,7 @@ public class EndLeaderboardCtrl extends SceneController {
 
 
     /**
-     * Send a user to a new waiting lobby with the same game ID
+     * Send a user to a new waiting lobby with the same game ID.
      */
     @FXML
     private void nextGame() {
@@ -99,7 +104,7 @@ public class EndLeaderboardCtrl extends SceneController {
     }
 
     /**
-     * returns back to SplashScreen
+     * returns back to SplashScreen.
      */
     @FXML
     private void onBackButton() {
